[package]
name = "sum_count_files"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}
failure = "=0.1.1"
glob = "=0.2.11"
log = "=0.3.8"
log4rs = "=0.7.0"
simple_logger = "=0.4.0"
structopt = "=0.1.5"
structopt-derive = "=0.1.5"

[features]
default = []

[[bin]]
name = "sum_count_files"
path = "src/bin/main.rs"
test = true
